--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rroot47.github.io/react-debutant_API-COUNTRY-AXIOS/",
   "name": "react-api-country",
   "version": "0.1.0",
   "private": true,
